Adding button to show an alert dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Dialog For Alert</string>
+    <string name="tap_message">Hello World! Tap to test the alert:</string>
 </resources>
